Add animated banner backdrop and enhance RSVP styling
Introduces a new banner_backdrop.png image and applies it as a blurred, animated background. Updates index.html to use Google Fonts, Animate.css, and improved heading/form animations. main.css is refactored for a modern, responsive look with enhanced typography, button styles, and a card-like form layout.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Manasa &amp; Sharath — RSVP</title>
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <script src="script.js" defer></script>
 </head>
 <body>
-  <h1>Manasa & Sharath</h1>
+  <h1 class="animate__animated animate__fadeInDown">Manasa &amp; Sharath</h1>
   <p>Please RSVP by <strong>September 1st</strong>. Enter the total number of people in your party.</p>
 
   <!-- Formspree handles data: replace xxxx with your form ID -->
-  <form action="https://formspree.io/f/xxxxxxxx" method="POST">
+  <form action="https://formspree.io/f/xxxxxxxx" method="POST" class="animate__animated animate__fadeInUp">
     <label>Your name
       <input name="name" required>
     </label>
