--- a/index.html
+++ b/index.html
@@ -50,5 +50,8 @@
     <input type="hidden" name="_redirect" value="success.html">
     <button>Send RSVP</button>
   </form>
+  <footer>
+    <span class="powered">Built&nbsp;with&nbsp;☕️&nbsp;by&nbsp;Tarun</span>
+  </footer>
 </body>
 </html>
