--- a/index.html
+++ b/index.html
@@ -32,23 +32,59 @@
 
     <label>Party size (including you)</label>
     <div class="number-input">
-      <button type="button" class="minus">-</button>
-      <input name="partySize" type="number" min="1" max="10" value="1" required>
-      <button type="button" class="plus">+</button>
+        <button type="button" class="plus" aria-label="Increase" style="display: block; margin: 0 auto;">+</button>
+        <input
+            name="partySize"
+            type="number"
+            min="1"
+            value="1"
+            required
+            inputmode="numeric"
+            pattern="[0-9]*"
+            style="width: 50%; display: block; margin: 0 auto;"
+        >
+        <button type="button" class="minus" aria-label="Decrease" style="display: block; margin: 0 auto;">−</button>
     </div>
 
     <fieldset>
       <legend>Events</legend>
 
-      <label><input type="checkbox" name="Mehandi"  value="yes"> Mehandi – Aug 07 @ 4 PM</label><br>
-      <label><input type="checkbox" name="Haldi" value="yes"> Haldi – Aug 08 @ 6 PM</label><br>
-      <small class="hint">Bring your cool moves and crazy vibes. Wear white or yellow.</small>
-      <label><input type="checkbox" name="Wedding"    value="yes"> Wedding – Aug 09 @ 10 AM</label>
+      <div class="event">
+        <input type="checkbox" id="ev-mehendi" name="Mehendi" value="yes">
+        <div class="event-content">
+          <div class="event-name">Mehendi</div>
+          <div class="event-datetime">August&nbsp;07, 6&nbsp;PM onwards</div>
+          <div class="event-address">517&nbsp;Jacob&nbsp;Dr, Aubrey, TX&nbsp;76227</div>
+        </div>
+      </div>
+
+      <div class="event">
+        <input type="checkbox" id="ev-haldi" name="Haldi" value="yes">
+        <div class="event-content">
+          <div class="event-name">Haldi</div>
+          <div class="event-datetime">August&nbsp;08, 6&nbsp;PM onwards</div>
+          <div class="event-address">1301&nbsp;E&nbsp;Blackjack&nbsp;Rd, Pilot&nbsp;Point, TX&nbsp;76258</div>
+        <div class="event-tag">
+            <strong><em>Bring your cool moves and crazy vibes. Wear white or yellow.</em></strong>
+        </div>
+        </div>
+      </div>
+
+      <div class="event">
+        <input type="checkbox" id="ev-wedding" name="Wedding" value="yes">
+        <div class="event-content">
+          <div class="event-name">Wedding</div>
+          <div class="event-datetime">August&nbsp;09, Muhurtham:&nbsp;11:35&nbsp;PM (reception starts 9&nbsp;PM)</div>
+          <div class="event-address">1301&nbsp;E&nbsp;Blackjack&nbsp;Rd, Pilot&nbsp;Point, TX&nbsp;76258</div>
+        </div>
+      </div>
     </fieldset>
 
     <!-- Auto-redirect after submit -->
     <input type="hidden" name="_redirect" value="success.html">
-    <button>Send RSVP</button>
+    <div style="text-align: center; margin-top: 1em;">
+        <button type="submit">Send RSVP</button>
+    </div>
   </form>
   <footer>
     <span class="powered">Built&nbsp;with&nbsp;☕️&nbsp;by&nbsp;Tarun</span>
