--- a/index.html
+++ b/index.html
@@ -13,13 +13,28 @@
   <script src="script.js" defer></script>
 </head>
 <body>
+  <!-- Hamburger Menu -->
+  <nav class="nav-menu">
+    <button class="hamburger" id="hamburger-btn" aria-label="Toggle navigation">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+    <div class="nav-overlay" id="nav-overlay">
+      <ul class="nav-links">
+        <li><a href="index.html">RSVP</a></li>
+        <li><a href="events.html">Events</a></li>
+      </ul>
+    </div>
+  </nav>
+  
   <h1 class="animate__animated animate__fadeInDown">Manasa &amp; Sharath</h1>
   <p>Please RSVP by <strong>August 7th</strong>. </p>
 
   <!-- Formspree handles data: replace xxxx with your form ID -->
   <form action="https://formspree.io/f/xxxxxxxx" method="POST" class="animate__animated animate__fadeInUp">
     <label>Your Name
-      <input name="name" required>
+      <input name="name" required placeholder="First Name" type="text" pattern="[A-Za-z\s]+" title="Please enter your name using letters only.">
     </label>
 
     <label>Email
@@ -27,7 +42,14 @@
     </label>
 
     <label>Phone Number
-      <input name="phone" type="tel" inputmode="numeric" pattern="[0-9]{10}" maxlength="10" required placeholder="10‑digit number">
+        <input
+            name="phone"
+            type="tel"
+            inputmode="tel"
+            required
+            placeholder="(555) 123-4567"
+            id="phone-input"
+        >
     </label>
 
     <label>Party size (including you)</label>
@@ -63,7 +85,7 @@
         <div class="event-content">
           <div class="event-name">Haldi</div>
           <div class="event-datetime">August&nbsp;08, 6&nbsp;PM onwards</div>
-          <div class="event-address">1301&nbsp;E&nbsp;Blackjack&nbsp;Rd, Pilot&nbsp;Point, TX&nbsp;76258</div>
+          <div class="event-address">Elegance Estates, 1301&nbsp;E&nbsp;Blackjack&nbsp;Rd, Pilot&nbsp;Point, TX&nbsp;76258</div>
         <div class="event-tag">
             <strong><em>Bring your cool moves and crazy vibes. Wear white or yellow.</em></strong>
         </div>
@@ -75,7 +97,7 @@
         <div class="event-content">
           <div class="event-name">Wedding</div>
           <div class="event-datetime">August&nbsp;09, Muhurtham:&nbsp;11:35&nbsp;PM (reception starts 9&nbsp;PM)</div>
-          <div class="event-address">1301&nbsp;E&nbsp;Blackjack&nbsp;Rd, Pilot&nbsp;Point, TX&nbsp;76258</div>
+          <div class="event-address">Elegance Estates, 1301&nbsp;E&nbsp;Blackjack&nbsp;Rd, Pilot&nbsp;Point, TX&nbsp;76258</div>
         </div>
       </div>
     </fieldset>
