Add new pages and redesign navigation for wedding site
Introduces home.html, contact.html, photos.html, and rsvp.html for a multi-page wedding website. Updates navigation menus across all pages for consistency, replaces index.html with rsvp.html, and enhances main.css with new styles for the landing, contact, and photos pages. Adds a countdown timer to script.js for the wedding date. Improves user experience and site structure for better navigation and presentation.

--- a/events.html
+++ b/events.html
@@ -22,8 +22,11 @@
     </button>
     <div class="nav-overlay" id="nav-overlay">
       <ul class="nav-links">
-        <li><a href="index.html">RSVP</a></li>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="rsvp.html">RSVP</a></li>
         <li><a href="events.html">Events</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="photos.html">Photos</a></li>
       </ul>
     </div>
   </nav>
@@ -97,7 +100,7 @@
   </div>
 
   <div class="cta-section">
-    <a href="index.html" class="rsvp-button">RSVP Now</a>
+    <a href="rsvp.html" class="rsvp-button">RSVP Now</a>
   </div>
 
   <footer>
