Wrap page titles in home link and fix CSS typos
Page titles on contact, events, photos, rsvp, and success pages are now wrapped in a link to home.html for improved navigation. Also fixed incomplete CSS property values in .party-card:hover and .rsvp-form-card selectors.

--- a/events.html
+++ b/events.html
@@ -31,7 +31,9 @@
     </div>
   </nav>
   
-  <h1 class="animate__animated animate__fadeInDown">Manasa &amp; Sharath</h1>
+  <a href="home.html" class="site-title-link">
+    <h1 class="animate__animated animate__fadeInDown">Manasa &amp; Sharath</h1>
+  </a>
   <p class="animate__animated animate__fadeInUp">Join us for these special celebrations</p>
 
   <div class="events-page animate__animated animate__fadeInUp">
