--- a/photos.html
+++ b/photos.html
@@ -31,7 +31,9 @@
     </div>
   </nav>
   
-  <h1 class="animate__animated animate__fadeInDown">Our Photos</h1>
+  <a href="home.html" class="site-title-link">
+    <h1 class="animate__animated animate__fadeInDown">Our Photos</h1>
+  </a>
   
   <div class="photos-container animate__animated animate__fadeInUp">
     <div class="coming-soon">
