--- a/rsvp.html
+++ b/rsvp.html
@@ -31,7 +31,9 @@
     </div>
   </nav>
   
-  <h1 class="animate__animated animate__fadeInDown">Manasa &amp; Sharath</h1>
+  <a href="home.html" class="site-title-link">
+    <h1 class="animate__animated animate__fadeInDown">Manasa &amp; Sharath</h1>
+  </a>
   <p>Please RSVP by <strong>August 7th</strong>. </p>
 
   <!-- Formspree handles data: replace xxxx with your form ID -->
