--- a/success.html
+++ b/success.html
@@ -32,7 +32,9 @@
   </nav>
 
   <div class="success-container animate__animated animate__fadeIn">
-    <h1 class="animate__animated animate__bounceIn">Thank You! 🎉</h1>
+    <a href="home.html" class="site-title-link">
+      <h1 class="animate__animated animate__bounceIn">Thank You! 🎉</h1>
+    </a>
     <p class="success-message animate__animated animate__fadeInUp animate__delay-1s">
       We're so excited to celebrate with you!<br>
       Your RSVP has been received successfully.
