--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,9 @@
     </div>
   </nav>
   
-  <h1 class="animate__animated animate__fadeInDown">Contact & Calendar</h1>
+  <a href="home.html" class="site-title-link">
+    <h1 class="animate__animated animate__fadeInDown">Contact & Calendar</h1>
+  </a>
   <p class="animate__animated animate__fadeInUp">Get in touch and add our events to your calendar</p>
 
   <div class="contact-page-container animate__animated animate__fadeInUp">
