Update wedding preview icon on home page
Changed the wedding event icon from 💒 to 🕉️ in the preview card for improved representation.

--- a/home.html
+++ b/home.html
@@ -89,7 +89,7 @@
             <p>August 8th • 6:00 PM</p>
           </div>
           <div class="preview-card">
-            <div class="preview-icon">💒</div>
+            <div class="preview-icon">🕉️</div>
             <h4>Wedding</h4>
             <p>August 9th • 11:35 AM</p>
           </div>
