Update wedding calendar icon in success page
Replaced the wedding calendar icon from 💒 to 🕉️ in success.html for improved visual representation.

--- a/success.html
+++ b/success.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="calendar-card">
-          <div class="calendar-icon">💒</div>
+          <div class="calendar-icon">🕉️</div>
           <h3>Wedding</h3>
           <p class="calendar-date">August 09, 2024 • 11:35 AM</p>
           <p class="calendar-location">Elegance Estates, Pilot Point, TX</p>
