Update wedding event dates and icons to 2025
Changed all wedding-related dates from 2024 to 2025 and updated event times to 11:35 PM where applicable. Also replaced calendar icons for Mehendi and Wedding events for consistency across contact, home, and success pages. Updated the countdown timer in script.js to reflect the new wedding date.

--- a/events.html
+++ b/events.html
@@ -85,7 +85,7 @@
       </div>
       <div class="event-details">
         <div class="event-time">
-          <strong>Muhurtham:</strong> 11:35 AM<br>
+          <strong>Muhurtham:</strong> 11:35 PM<br>
           <strong>Reception:</strong> 9 PM onwards
         </div>
         <div class="event-location">
