--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
     <div class="hero-content animate__animated animate__fadeIn">
       <h1 class="animate__animated animate__fadeInDown animate__delay-1s">Manasa &amp; Sharath</h1>
       <p class="wedding-date animate__animated animate__fadeInUp animate__delay-2s">
-        August 9th, 2024
+        August 9th, 2025
       </p>
       <p class="wedding-location animate__animated animate__fadeInUp animate__delay-2s">
         Elegance Estates, Pilot Point, Texas
@@ -79,19 +79,19 @@
         <h3>Celebration Events</h3>
         <div class="event-preview-cards">
           <div class="preview-card">
-            <div class="preview-icon">📅</div>
+            <div class="preview-icon">🎨</div>
             <h4>Mehendi</h4>
-            <p>August 7th • 6:00 PM</p>
+            <p>August 7th, 2025 • 6:00 PM</p>
           </div>
           <div class="preview-card">
             <div class="preview-icon">🌟</div>
             <h4>Haldi</h4>
-            <p>August 8th • 6:00 PM</p>
+            <p>August 8th, 2025 • 6:00 PM</p>
           </div>
           <div class="preview-card">
             <div class="preview-icon">🕉️</div>
             <h4>Wedding</h4>
-            <p>August 9th • 11:35 AM</p>
+            <p>August 9th, 2025 • 11:35 PM</p>
           </div>
         </div>
       </div>
