--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
       
       <div class="calendar-cards">
         <div class="calendar-card">
-          <div class="calendar-icon">📅</div>
+          <div class="calendar-icon">🎨</div>
           <h3>Mehendi</h3>
           <p class="calendar-date">August 07, 2024 • 6:00 PM</p>
           <p class="calendar-location">517 Jacob Dr, Aubrey, TX</p>
@@ -90,9 +90,9 @@
         </div>
 
         <div class="calendar-card">
-          <div class="calendar-icon">💒</div>
+          <div class="calendar-icon">🕉️</div>
           <h3>Wedding</h3>
-          <p class="calendar-date">August 09, 2024 • 11:35 AM</p>
+          <p class="calendar-date">August 09, 2025 • 11:35 PM</p>
           <p class="calendar-location">Elegance Estates, Pilot Point, TX</p>
           <a href="events/manasa-sharath-wedding.ics" class="calendar-btn" download>Add to Calendar</a>
         </div>
