Update event dates and add Google Maps links
Changed all event dates from 2024 to 2025 in events.html. Added 'Open in Google Maps' links for each event location. Updated .maps-link styles in main.css for better appearance and interactivity. Adjusted the wedding reception time in the ICS file to start and end earlier.

--- a/events.html
+++ b/events.html
@@ -40,14 +40,15 @@
     <div class="event-card">
       <div class="event-header">
         <h2>Mehendi</h2>
-        <div class="event-date">August 07, 2024</div>
+        <div class="event-date">August 07, 2025</div>
       </div>
       <div class="event-details">
         <div class="event-time">6 PM onwards</div>
         <div class="event-location">
           <strong>Address:</strong><br>
           517 Jacob Dr<br>
-          Aubrey, TX 76227
+          Aubrey, TX 76227<br>
+          <a href="https://maps.google.com/?q=517+Jacob+Dr,+Aubrey,+TX+76227" target="_blank" class="maps-link">📍 Open in Google Maps</a>
         </div>
         <div class="event-description">
           Traditional henna ceremony with music, dancing, and celebration. Come ready to get beautiful henna designs!
@@ -58,7 +59,7 @@
     <div class="event-card">
       <div class="event-header">
         <h2>Haldi</h2>
-        <div class="event-date">August 08, 2024</div>
+        <div class="event-date">August 08, 2025</div>
       </div>
       <div class="event-details">
         <div class="event-time">6 PM onwards</div>
@@ -66,7 +67,8 @@
           <strong>Address:</strong><br>
           Elegance Estates<br>
           1301 E Blackjack Rd<br>
-          Pilot Point, TX 76258
+          Pilot Point, TX 76258<br>
+          <a href="https://maps.google.com/?q=1301+E+Blackjack+Rd,+Pilot+Point,+TX+76258" target="_blank" class="maps-link">📍 Open in Google Maps</a>
         </div>
         <div class="event-description">
           <strong>Bring your cool moves and crazy vibes!</strong><br>
@@ -81,7 +83,7 @@
     <div class="event-card">
       <div class="event-header">
         <h2>Wedding</h2>
-        <div class="event-date">August 09, 2024</div>
+        <div class="event-date">August 09, 2025</div>
       </div>
       <div class="event-details">
         <div class="event-time">
@@ -92,7 +94,8 @@
           <strong>Address:</strong><br>
           Elegance Estates<br>
           1301 E Blackjack Rd<br>
-          Pilot Point, TX 76258
+          Pilot Point, TX 76258<br>
+          <a href="https://maps.google.com/?q=1301+E+Blackjack+Rd,+Pilot+Point,+TX+76258" target="_blank" class="maps-link">📍 Open in Google Maps</a>
         </div>
         <div class="event-description">
           The main ceremony where two hearts become one. Join us for this sacred moment followed by celebration, dinner, and dancing!
