Update footer with new animated message and author name
Replaces the old footer text across all HTML pages with a new, animated message featuring a playful note and the full author name, Tarun Reddy Nukala. Adds animation classes for visual effect and updates the branding to be more personalized and engaging.

--- a/success.html
+++ b/success.html
@@ -82,7 +82,10 @@
   </div>
 
   <footer>
-    <span class="powered">Built&nbsp;with&nbsp;☕️&nbsp;by&nbsp;Tarun</span>
+    <span class="powered animate__animated animate__heartBeat animate__repeat-2">
+        Powered by bad dance moves 💃 & good coffee ☕<br>
+        Site brewed with ❤️ by <strong>Tarun Reddy Nukala</strong>
+    </span>
   </footer>
 </body>
 </html>
