--- a/home.html
+++ b/home.html
@@ -27,6 +27,7 @@
         <li><a href="events.html">Events</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="photos.html">Photos</a></li>
+        <li><a href="live.html">Live Stream</a></li>
       </ul>
     </div>
   </nav>
