Add Live Stream CTA button and styles
Added a 'Live Stream' call-to-action button to home.html and introduced corresponding styles in main.css, including a red gradient background and shimmer animation for the button. This enhances visibility and encourages users to access the live stream feature.

--- a/home.html
+++ b/home.html
@@ -63,6 +63,7 @@
       <div class="cta-buttons animate__animated animate__fadeInUp animate__delay-4s">
         <a href="rsvp.html" class="cta-btn primary">RSVP Now</a>
         <a href="events.html" class="cta-btn secondary">View Events</a>
+        <a href="live.html" class="cta-btn live-stream">🔴 Live Stream</a>
       </div>
     </div>
   </div>
