--- a/home.html
+++ b/home.html
@@ -70,14 +70,14 @@
 
   <div class="story-section">
     <div class="story-container">
-      <h2 class="animate__animated animate__fadeInUp">Our Story</h2>
-      <p class="story-text animate__animated animate__fadeInUp animate__delay-1s">
+      <h2 class="animate__animated animate__fadeInUp animate__delay-5s">Our Story</h2>
+      <p class="story-text animate__animated animate__fadeInUp animate__delay-6s">
         Join us as we celebrate the beginning of our forever together. 
         We're excited to share this special moment with our family and friends 
         as we exchange vows and start our journey as husband and wife.
       </p>
       
-      <div class="event-preview animate__animated animate__fadeInUp animate__delay-2s">
+      <div class="event-preview animate__animated animate__fadeInUp animate__delay-7s">
         <h3>Celebration Events</h3>
         <div class="event-preview-cards">
           <div class="preview-card">
