--- a/contact.html
+++ b/contact.html
@@ -47,8 +47,7 @@
           <div class="contact-icon">✉️</div>
           <div class="contact-content">
             <h3>Email</h3>
-            <a href="mailto:manasakamepally0027@gmail.com">manasakamepally0027@gmail.com</a><br>
-            <a href="mailto:rakasisharath@gmail.com">rakasisharath@gmail.com</a>
+            <a href="""mailto:manasakamepally0027@gmail.com,rakasisharath@gmail.com">manasakamepally0027@gmail.com, rakasisharath@gmail.com</a>
           </div>
         </div>
         
