--- a/rsvp.html
+++ b/rsvp.html
@@ -37,8 +37,8 @@
   </a>
   <p>Please RSVP by <strong>August 7th</strong>. </p>
 
-  <!-- Formspree handles data: replace xxxx with your form ID -->
-  <form id="rsvp-form" action="https://formspree.io/f/mwpqkekw" method="POST" class="animate__animated animate__fadeInUp">
+  <!-- Google Apps Script handles data -->
+  <form id="rsvp-form" method="POST" class="animate__animated animate__fadeInUp">
     <label>Your Name
       <input name="name" required placeholder="First Name" type="text" pattern="[A-Za-z\s]+" title="Please enter your name using letters only.">
     </label>
