Improve email display and update contact links
Separated email addresses in contact.html for better readability and added responsive styling in main.css. Updated the live stream wishes link in live.html to include both email addresses.

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,14 @@
           <div class="contact-icon">✉️</div>
           <div class="contact-content">
             <h3>Email</h3>
-            <a href="""mailto:manasakamepally0027@gmail.com,rakasisharath@gmail.com">manasakamepally0027@gmail.com, rakasisharath@gmail.com</a>
+            <div class="email-wrapper">
+              <div class="email-item">
+                <a href="mailto:manasakamepally0027@gmail.com">manasakamepally0027@gmail.com</a>
+              </div>
+              <div class="email-item">
+                <a href="mailto:rakasisharath@gmail.com">rakasisharath@gmail.com</a>
+              </div>
+            </div>
           </div>
         </div>
         
@@ -71,7 +78,9 @@
 
     <div class="calendar-download-section">
       <h2>Add Events to Your Calendar</h2>
-      <p class="calendar-subtitle">Download calendar files for all our celebration events</p>
+      <p class="calendar-subtitle" style="text-align: center;">
+        Download calendar files for all our celebration events
+      </p>
       
       <div class="calendar-cards">
         <div class="calendar-card">
