--- a/live.html
+++ b/live.html
@@ -109,7 +109,7 @@
       <h3>Join the Celebration</h3>
       <p>Even though you're watching from afar, you're still part of our special day!</p>
       <div class="interaction-options">
-        <a href="mailto:manasakamepally0027@gmail.com?subject=Live Stream Wishes" class="interaction-btn">📧 Send Wishes</a>
+        <a href="mailto:manasakamepally0027@gmail.com,rakasisharath@gmail.com?subject=Live Stream Wishes" class="interaction-btn">📧 Send Wishes</a>
         <a href="tel:+19452329179" class="interaction-btn">📞 Call Us</a>
         <a href="#" class="interaction-btn" onclick="shareStream()">📤 Share Stream</a>
       </div>
