--- a/success.html
+++ b/success.html
@@ -76,8 +76,8 @@
       <h3>Questions?</h3>
       <p>Feel free to reach out if you have any questions about the events!</p>
       <div class="contact-links">
-        <a href="mailto:manasakamepally0027@gmail.com" class="contact-btn">✉️ Email Us</a>
-        <a href="tel:+19452329179" class="contact-btn">📞 Call Us</a>
+        <a href="#" id="success-email" data-user="manasakamepally0027" data-domain="gmail.com" class="contact-btn">✉️ Loading...</a>
+        <a href="#" id="success-phone" data-number="19452329179" class="contact-btn">📞 Loading...</a>
       </div>
     </div>
   </div>
