--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,7 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="photos.html">Photos</a></li>
         <li><a href="live.html">Live Stream</a></li>
+        <li class="credits-item"><span class="credits">Built with ❤️ by Tarun</span></li>
       </ul>
     </div>
   </nav>
