--- a/events.html
+++ b/events.html
@@ -110,11 +110,7 @@
     <a href="rsvp.html" class="rsvp-button">RSVP Now</a>
   </div>
 
-  <footer>
-    <span class="powered animate__animated animate__heartBeat animate__repeat-2">
-        Powered by bad dance moves 💃 & good coffee ☕<br>
-        Site brewed with ❤️ by <strong>Tarun Reddy Nukala</strong>
-    </span>
-  </footer>
+  <!-- Footer will be loaded by script.js -->
+  <footer></footer>
 </body>
 </html>
